# landsat

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.MD  CODE_OF_CONDUCT.MD  CONTRIBUTING.MD  README.md  docker_env  environment.yml  mypy.ini  requirements-dev.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.MD
.github/workflows/: continuous-integration.yml
docker/: Dockerfile  Dockerfile-dev  build  cibuild  console  docs-server  format  notebook  stac  test
docs/: conf.py  index.rst  installation_and_basic_usage.ipynb
examples/: c2l1-file-list.txt  c2l2-file-list.txt
examples/collection/c2l2/: landsat-c2-l1.json
examples/item/: LC08_L2SP_005009_20150710_02_T2.json
examples/item/etm/: LE07_L2SP_021030_20100109_02_T1.json
examples/item/mss/: LM01_L1GS_001010_19720908_02_T2.json
examples/item/tm/: LT04_L2SP_002026_19830110_02_T1.json
examples/landsat-c2-l1/: collection.json
examples/landsat-c2-l2/: collection.json
examples/legacy-landsat-8/: LC08_L2SP_005009_20150710_02_T2-legacy.json  LC08_L2SP_005009_20150710_02_T2.json
scripts/: create_examples.py  format  lint  publish  test
tests/: data.py  test_ang_metadata.py  test_commands.py  test_create_stac.py  test_geometry.py  test_mtl_metadata.py
tests/data-files/: LC08_L2SP_030034_20201111_20201212_02_T1_SR_stac.json  LC08_L2SR_081119_20200101_20200823_02_T2_SR_stac.json  LC08_L2SR_232122_20191218_20201023_02_T2_SR_stac.json  LE07_L2SP_167064_20070321_20200913_02_T1_SR_stac.json  LT05_L2SP_201034_19860504_20200917_02_T1_SR_stac.json
tests/fixtures/: usgs_stac_api.yml
(+118 files in other folders)
