[metadata]
name = stactools-landsat
version = attr: stactools.landsat.__version__
description = stactools package for Landsat data
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = stac@radiant.earth
url = https://github.com/stactools-landsats/stactools-landsat
project_urls =
    Documentation = https://stactools-landsat.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-landsats/stactools-landsat/issues
keywords =
    stactools
    pystac
    catalog
    STAC
    Landsat
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
package_dir =
    = src
packages =
    stactools.landsat
    stactools.landsat.fragments
install_requires =
    stactools >= 0.2.6
    pystac_client >= 0.3.2

[options.packages.find]
where = src

[options.package_data]
stactools.landsat = fragments/*/*.json
